@@ -1,5 +1,6 @@
 2010-12-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* gtkimage.py, html.py: Added support for generating thumbnails.
 	* share/history/jquery.*.js: Added support for jQuery plugin for
 	  lazy loading images.
 
